--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "matryoshka-model/matryoshka": "0.8.*@dev",
     "matryoshka-model/mongo-wrapper": "0.8.*@dev",
     "matryoshka-model/zf-apigility-matryoshka": "dev-develop",
-    "matryoshka-model/zf2-matryoshka-module": "dev-develop",
+    "matryoshka-model/zf2-matryoshka-module": "0.8.*@dev",
     "ripaclub/aclman": "dev-develop@dev",
     "strapieno/str-auth-api" : "dev-develop",
     "strapieno/str-auth-model" : "dev-develop",
